# apudevmatch2025

./: .cursorignore  .gitattributes  .gitignore  BUILDPLAN.MD  BUILDPLAN.md  DEPLOYMENT_GUIDE.md  PLAN.md  README.md  amendments.md  package-lock.json  package.json  sapphireethersplan.md  subgraph.yaml
contracts/: device_registry.move
docs/: BACKEND_SUI_WALRUS_SEAL_DESIGN.md  FRONTEND_BACKEND_INTEGRATION.md  FRONTEND_COMPONENTS.md  IMPLEMENTATION.md  PLAN.md  setup.md  zkloginGuide.md
frontend/: GETTING_STARTED.md  README.md  index.html  manifest.json  package-lock.json  package.json  test-bg.html  vite.config.ts  zkloginGUide.md  zkloginTutorial.md
infrastructure/rofl-worker/: .env.development  .env.example  .gitignore  CONVERSION_COMPLETE.md  Cargo.simple.toml  Cargo.toml  Dockerfile  LIVE_DEMONSTRATION_RESULTS.md  QUICK_TEST_GUIDE.md  README.md  ROFL_SETUP_GUIDE.md  SUI_INTEGRATION_GUIDE.md  TESTING_COMPLETE.md  compose.yaml  deploy-to-dockerhub.sh  deploy-with-compose.sh  rofl.yaml  setup-windows.ps1  test-rofl-simple.ps1
infrastructure/rofl-worker/abis/: AtomicVaultManager.json  MirrorInbox.json
infrastructure/rofl-worker/scripts/: deploy.sh
infrastructure/rofl-worker/src/: demo.rs  main.rs  main.simple.rs  working_demo.rs
infrastructure/rofl-worker/src/bindings/: mod.rs
infrastructure/rofl-worker/src/bridging/: mod.rs  sapphire_bridge.rs
infrastructure/rofl-worker/src/config/: chain_config.rs  config.rs  mod.rs  retry_config.rs  rofl_config.rs
infrastructure/rofl-worker/src/handlers/: device_registry.rs  mod.rs
infrastructure/rofl-worker/src/monitoring/: mod.rs  sui_monitor.rs
infrastructure/rofl-worker/src/processing/: event_queue.rs  mod.rs
infrastructure/rofl-worker/src/security/: attestation.rs  audit_logger.rs  mod.rs  secure_comms.rs
scripts/: simple-demo.ts
sui-contracts/: Move.toml  test_contract.md
webapp/: next.config.mjs  package-lock.json  package.json
webapp_backend/: BACKEND_IMPLEMENTATION.md  package-lock.json  package.json
webapp_frontend/: .gitignore  =  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+687 files in other folders)
