[package]
name = "grand-warden-rofl"
version = "1.0.0"
edition = "2021"

[dependencies]
# Note: SGX dependencies will be handled by official ROFL build process
# For development testing, we use standard Rust libraries

# Async runtime and web3 connectivity
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
reqwest = { version = "0.11", features = ["json", "stream"] }
hyper = { version = "0.14", features = ["full"] }

# Blockchain libraries
ethers = { version = "2.0", features = ["ws", "rustls"] }
# Note: Sui SDK will be added when Move contracts are ready

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
bytes = "1.0"

# Error handling and logging
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration and environment
config = "0.13"
dotenv = "0.15"

# Cryptography
sha2 = "0.10"
aes-gcm = "0.10"
rand = "0.8"

# Time and scheduling
chrono = { version = "0.4", features = ["serde"] }
cron = "0.12"

# Metrics and monitoring
prometheus = "0.13"
metrics = "0.21"

# Queue and messaging
crossbeam = "0.8"
futures = "0.3"

[dev-dependencies]
mockito = "1.2"
tempfile = "3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.enclave]
inherits = "release"
panic = "abort"